ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: users
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - guestbook.centenarybank.demo.com
      secretName: tls-secret
  rules:
  - host: guestbook.centenarybank.demo.com   
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: guestbook-ui
            port:
              number: 80
